Fix spacing on mobile homepage

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -17,13 +17,16 @@
 
     @media (max-width: 919px) {
       min-height: calc(100vh - 10rem);
-      padding: 5rem 2rem 3rem;
     }
   }
 
   &__left {
     background-color: var(--primary-color);
     flex: 1 1 40%;
+
+    @media (max-width: 919px) {
+      padding: 5rem 2rem 3rem;
+    }
 
     & > * {
       margin-right: 8rem;
@@ -36,6 +39,10 @@
 
   &__right {
     flex: 1 1 60%;
+
+    @media (max-width: 919px) {
+      padding: 2rem 2rem 5rem;
+    }
 
     & > * {
       margin-left: -12rem;
